--- a/LangChain/requirements.txt
+++ b/LangChain/requirements.txt
@@ -1,6 +1,9 @@
 langchain
 langchain-community
 langchain-google-genai
+langchain-text-splitters
 python-dotenv
 ipykernal
 pydantic
+beautifulsoup4
+pypdf
